--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     background-color: #C8BDBB;
     text-align: left;
     padding-left:20px;
+    text-highlight
 }  
 .info-grid {
     margin-left:: 10px;  
@@ -34,17 +35,17 @@
   cursor: pointer;
   transition: 0.3s;
   font-size: 17px;
-  padding-top:20px;
-  padding-bottom:20px;
+  padding-top:10px;
+  padding-bottom:10px;
 }
 
 /* Change background color of buttons on hover */
 .tablinks:hover {
-  background-color:#BCB7B5;
+ transform: scaleX(1.5);
 }
 
 /* Create an active/current "tab button" class */
-.tablinks.active {
+.tablinks:active {
   background-color: #ccc;
 }
 
@@ -61,9 +62,37 @@
      <button class="tablinks" onclick="openSection(event, 'About')" id="defaultClosed">About</button>
     </div>
     
-    <div class="info-grid"></div>
+    <div class="info-grid">
+    <div id="Home" class="tabcontent">
+  <h3>Home</h3>
+  <p>London is the capital city of England.</p>
+</div>
+
+<div id="About" class="tabcontent">
+  <h3>About</h3>
+  <p>Paris is the capital of France.</p> 
+</div></div>
   
 </div>
+
+<script>
+function openSection(evt, sectionName) {
+  var i, tabcontent, tablinks;
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].className = tablinks[i].className.replace(" active", "");
+  }
+  document.getElementById(sectionName).style.display = "block";
+  evt.currentTarget.className += " active";
+}
+
+// Get the element with id="defaultOpen" and click on it
+document.getElementById("defaultOpen").click();
+</script>
 
 </body>
 </html>
